Partial revert "Fix spacing between icon + text in main menu"
This reverts commit b308c91b506f47012beeaa27eff42d14677cdbb7.

Reason for revert: Partial revert. CSS is no longer needed
with I2dbc88331c1a43441f4944cba9b0a51ad41d0025

Bug: T292452

--- a/resources/skins.minerva.mainMenu.styles/MainMenuItem.less
+++ b/resources/skins.minerva.mainMenu.styles/MainMenuItem.less
@@ -69,10 +69,6 @@
 					font-size: @font-size-minerva-small;
 					font-weight: bold;
 				}
-
-				.mw-ui-icon + span {
-					margin-left: 8px;
-				}
 			}
 		}
 	}
